Fix: get started link on home page. Broken by recent tutorials pr. Fixes #8

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 <section class="masthead">
   <h1>High-performance parallel programming language</h1>
-  <p><a href="/tutorial/" class="btn">Get started</a></p>
+  <p><a href="/learn/" class="btn">Get started</a></p>
 </section>
 
 <section class="front-section">
