--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: Home
         {% for post in site.posts limit:posts_to_show %}
           <tr>
             <td><a href="{{ post.url }}">{{ post.title }}</a>&nbsp;&nbsp; </td>
-            <td style="white-space: nowrap; text-align: right">{{ post.date | date:"%B %Y" }}</td>
+            <td style="white-space: nowrap; text-align: right">{{ post.date | date:"%d %b %Y" }}</td>
           </tr>
           {% comment %} <dd></dd> {% endcomment %}
         {% endfor %}
