--- a/packages/search.html
+++ b/packages/search.html
@@ -2,18 +2,18 @@
 layout: default
 ---
 
-{% include nav.html %}
+{% include nav.html active='Packages' %}
   
-<script src="/explore/projects_json.js"></script>
+<script src="{{ site.baseurl }}/packages/projects_json.js"></script>
 
 
   <section class="front-section">
     <div class="container">
       <div class="col-wide">
           
-          <a href='/explore'> < Back</a>
+          <h2> <a href='{{ site.baseurl }}/packages'> Packages</a> / {{page.title}}</h2>
 
-          <h1>Search community projects</h1>
+          <form action="{{ site.baseurl }}/packages/search" method="get">
           
           <form action="/explore/search" method="get">
             <input type="text" name="query" id="search-query" class="search-box" placeholder="Search for a project">
@@ -21,7 +21,7 @@ layout: default
           </form>
         </br>
 
-        <div id="search-results"></div>
+        <div style="margin-left: 30px; margin-right: 100px;" id="search-results"></div>
 
       </div>
   
@@ -39,4 +39,4 @@ layout: default
     </div>
   </section>
   
-  <script src="/explore/projects_search.js"></script>
+  <script src="{{ site.baseurl }}/packages/projects_search.js"></script>
