Update: packages footer with instructions link. Updates link at the bottom of the packages pages to PACKAGES.md in repository for the criteria and process for getting a project listed in the index.

--- a/packages/index.html
+++ b/packages/index.html
@@ -116,9 +116,9 @@ description: A rich ecosystem of high-performance code
   <div class="container">
     <div class="col-wide">
       
-      Want your project listed or see a problem? Submit an issue
-        <a href="https://github.com/fortran-lang/fortran-lang.github.io/issues" target="_blank">
-          <i class="devicon-github-plain colored"></i> here</a>.
+      See
+	  <a href="https://github.com/fortran-lang/fortran-lang.github.io/blob/master/PACKAGES.md" target="_blank">
+          <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
 
   </div>
 </section>
