add mailing list to the landing page and news sidebar

--- a/index.html
+++ b/index.html
@@ -110,13 +110,19 @@ title: Home
     <div class="col-narrow">
       <h2 id="chat">Join us!</h2>
 
+      {% include mailing_list.html %}
+
       {% include twitter.html %}
 
+      {% include rss_feed.html %}
+
+      <h3>Open source</h3>
       <p>
       Contribute code, report bugs and request features at 
       <a href="https://github.com/fortran-lang">GitHub</a>.
       </p>
 
+      <h3>Stack Exchange</h3>
       <p>
         Ask about usage and configuration at <a href="https://stackoverflow.com/questions/tagged/fortran">Stack Exchange</a>.
       </p>
