Revert "Github actions build & PR preview"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 <section class="masthead">
   <h1>High-performance parallel programming language</h1>
-  <p><a href="{{ site.baseurl }}/learn/" class="btn">Get started</a></p>
+  <p><a href="/learn/" class="btn">Get started</a></p>
 </section>
 
 <section class="front-section">
@@ -58,7 +58,7 @@ title: Home
         {% assign posts_to_show = 5 %}
         {% for post in site.posts limit:posts_to_show %}
           <tr>
-            <td><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>&nbsp;&nbsp; </td>
+            <td><a href="{{ post.url }}">{{ post.title }}</a>&nbsp;&nbsp; </td>
             <td style="white-space: nowrap; text-align: right">{{ post.date | date:"%d %b %Y" }}</td>
           </tr>
           {% comment %} <dd></dd> {% endcomment %}
@@ -66,7 +66,7 @@ title: Home
         </table>
         {% comment %} </dl> {% endcomment %}
 
-        <p><a href="{{ site.baseurl }}/news/archive">More…</a></p>
+        <p><a href="/news/archive">More…</a></p>
 
       </div>
     </div>
