--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@ title: Home
 
       {% include mailing_list.html %}
 
+      {% include discourse.html %}
+
       {% include twitter.html %}
 
       {% include rss_feed.html %}
