--- a/index.html
+++ b/index.html
@@ -200,9 +200,16 @@
       <h3>Mailing list</h3>
 
 <p>Subscribe to our <a href="https://groups.io/g/fortran-lang">mailing list</a>
-to discuss anything Fortran related, announce Fortran projects, have development
-discussions related to core fortran-lang.org projects (stdlib, fpm), and to get
+to discuss anything Fortran related, announce Fortran projects, discuss development
+of core fortran-lang.org projects (stdlib, fpm), and get
 the latest news.</p>
+
+
+      <p>
+<a href="https://fortran-lang.discourse.group">
+<img border="0" alt="Discourse" src="/assets/img/discourse.png" width="200"></img>
+</a>
+</p>
 
 
       <h3>Twitter</h3>
@@ -223,10 +230,6 @@ the latest news.</p>
       <a href="https://github.com/fortran-lang">GitHub</a>.
       </p>
 
-      <h3>Stack Exchange</h3>
-      <p>
-        Ask about usage and configuration at <a href="https://stackoverflow.com/questions/tagged/fortran">Stack Exchange</a>.
-      </p>
     </div>
 
   </div>
