Jekyll build, commit ce1271584d18293bbce601f43ea4438468c6b120 (on:push)

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	early--science and engineering. 
         These include numerical weather and ocean prediction, 
 	computational fluid dynamics, applied math, statistics, and finance.
-	Fortran is the dominant languge of High Performance Computing,
+	Fortran is the dominant language of High Performance Computing,
 	and is used to 
 	<a href="https://top500.org">benchmark the fastest supercomputers in the world</a>.
 
@@ -243,7 +243,7 @@ the latest news.</p>
       <h3>Write proposals</h3>
       <p>
       Have an idea about how to improve the language?
-      You can write new proposals or contribute to exising proposals 
+      You can write new proposals or contribute to existing proposals 
       to the Fortran Standard Committee
       on <a href="https://github.com/j3-fortran/fortran_proposals">GitHub</a>.
       </p>
