Jekyll build, commit 9c7873d6c776c46e1c4e49f3ea718b6b1a3ab7f2 (on:push)

--- a/compilers/index.html
+++ b/compilers/index.html
@@ -146,7 +146,7 @@ CUDA programs can run several times faster on a single Tesla V100 GPU compared
 to all the cores of a dual-socket server, and interoperate with MPI and OpenMP
 to deliver the full power of today’s multi-GPU servers.</p>
 
-<h3 id="cray">Cray</h3>
+<h3 id="hpe--cray">HPE / Cray</h3>
 
 <p>The <a href="https://www.cray.com/sites/default/files/SB-Cray-Programming-Environment.pdf">Cray Compiler Environment (CCE)</a>
 is the cornerstone innovation of Cray’s adaptive computing paradigm. CCE builds
