Jekyll build, commit 7e0290b0a2111176157eae18b789556da87457f5 (on:push)

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ the latest news.</p>
       <h3>Write Fortran software</h3>
       <p>
       Or just write Fortran software for your research, business, or schoolwork.
-      You can learn how to get started <a href="/tutorial/">here</a>.
+      You can learn how to get started <a href="/learn/">here</a>.
       </p>
     </div>
 
