--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ title: Home
       <h3>Write Fortran software</h3>
       <p>
       Or just write Fortran software for your research, business, or schoolwork.
-      You can learn how to get started <a href="/learn/">here</a>.
+      You can learn how to get started <a href="{{site.baseurl}}/learn/">here</a>.
       </p>
     </div>
 
