Jekyll build, commit 45b368ae936ded8b1d6193747db933209ea4044a (on:push)

--- a/compilers/index.html
+++ b/compilers/index.html
@@ -148,7 +148,7 @@ to deliver the full power of today’s multi-GPU servers.</p>
 
 <h3 id="hpe--cray">HPE / Cray</h3>
 
-<p>The <a href="https://www.cray.com/sites/default/files/SB-Cray-Programming-Environment.pdf">Cray Compiler Environment (CCE)</a>
+<p>The <a href="https://www.cray.com/sites/default/files/SB-Cray-Programming-Environment.pdf">Cray Compiling Environment (CCE)</a>
 is the cornerstone innovation of Cray’s adaptive computing paradigm. CCE builds
 on a well-developed and sophisticated Cray technology base that identifies
 regions of computation that are either sequential scalar, vector parallel or
