Update: news sidebar
Remove social links from sidebar and add twitter feed.
Also add some nice icons from the new icon pack.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title: Home
     <div class="col-narrow">
 
       <div class="news-section">
-        <h2 id="news">News</h2>
+        <h2 id="news"><i class="far fa-newspaper"></i> News</h2>
 
         {% comment %} <dl class="nvim-posts"> {% endcomment %}
         <table>
@@ -66,7 +66,11 @@ title: Home
         </table>
         {% comment %} </dl> {% endcomment %}
 
-        <p><a href="{{ site.baseurl }}/news/archive">More…</a></p>
+        <p><a href="{{ site.baseurl }}/news">More…</a></p>
+      </br>
+        <a class="twitter-timeline" data-height="500" href="https://twitter.com/fortranlang?ref_src=twsrc%5Etfw"></a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
       </div>
     </div>
@@ -118,10 +122,10 @@ title: Home
 
       {% include rss_feed.html %}
 
-      <h3>Open source</h3>
+      <h3><i class="fab fa-github"></i> Open source</h3>
       <p>
       Contribute code, report bugs and request features at 
-      <a href="https://github.com/fortran-lang">GitHub</a>.
+      <a href="https://github.com/fortran-lang" target="_blank" >GitHub</a>.
       </p>
 
     </div>
