Update: sort ref books by year descending.

--- a/learn/index.html
+++ b/learn/index.html
@@ -104,7 +104,8 @@ description: Learning resources for beginners and experts alike
     <h3> <i class="fas fa-book-open"></i> In print </h3>
     <ul>
 
-      {% for refBook in site.data.learning.reference-books %}
+      {% assign refBooks = site.data.learning.reference-books | sort: "year" | reverse %}
+      {% for refBook in refBooks %}
       <li>
         <i>{{ refBook.author }}</i>. {{ refBook.year }}. 
         <a href="{{ refBook.url }}" target="_blank"><b>
