Jekyll build, commit ba198d035fe67bde3db1cd54c47406439231f4cb (on:push)

--- a/packages/programming.html
+++ b/packages/programming.html
@@ -362,6 +362,7 @@
      
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="/assets/js/page_nav.js"></script>
     <script>
       feather.replace()
     </script>
