--- a/learn/best_practices.html
+++ b/learn/best_practices.html
@@ -230,6 +230,7 @@ the latest news.</p>
      
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="/assets/js/page_nav.js"></script>
     <script>
       feather.replace()
     </script>
