Update: contributor plotting interface
Simplify html-side of contributor plots. Start cleanup of javascript.

--- a/community/index.html
+++ b/community/index.html
@@ -23,14 +23,24 @@ description: Collaboration for the advancement of Fortran
         A community-driven project for a <i>de facto</i> "standard" library for Fortran.
         The stdlib project is both a specification and a reference implementation, developed in
         cooperation with the Fortran Standards Committee.
-        Find out more on
-        <a href="https://github.com/fortran-lang/stdlib" target="_blank">
-          <i class="devicon-github-plain colored"></i> GitHub</a>.
-        </p>
-        {% include img_cached.html src="//img.shields.io/github/stars/fortran-lang/stdlib?style=social" %}
-        {% include img_cached.html src="//img.shields.io/github/forks/fortran-lang/stdlib?style=social&label=Fork" %}
-        {% include img_cached.html src="//img.shields.io/github/last-commit/fortran-lang/stdlib?color=blue" %}
-        {% include img_cached.html src="//img.shields.io/github/issues/fortran-lang/stdlib" %}
+      </p>
+      <span style="display: inline-block;">
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/fortran-lang/stdlib" target="_blank"><b>
+            GitHub </b></a>
+            &ensp;
+      </span>
+      <span style="display: inline-block;">
+        <i class="fas fa-info-circle"></i>
+        <a href="https://stdlib.fortran-lang.org/" target="_blank"><b>
+          Documentation </b></a>
+          &ensp;
+      </span>
+      <span style="display: inline-block;">
+        <i class="fab fa-git-alt"></i> 
+        <a href="https://github.com/fortran-lang/stdlib/blob/master/WORKFLOW.md" target="_blank"><b>
+        Contributing </b></a>
+      </span>
 
       
 
@@ -39,28 +49,37 @@ description: Collaboration for the advancement of Fortran
         <p>
         A prototype project to develop a common build system for Fortran packages
         and their dependencies.
-        Find out more on
-        <a href="https://github.com/fortran-lang/fpm" target="_blank">
-          <i class="devicon-github-plain colored"></i> GitHub</a>.
         </p>
-        {% include img_cached.html src="//img.shields.io/github/stars/fortran-lang/fpm?style=social" %}
-        {% include img_cached.html src="//img.shields.io/github/forks/fortran-lang/fpm?style=social&label=Fork" %}
-        {% include img_cached.html src="//img.shields.io/github/last-commit/fortran-lang/fpm?color=blue" %}
-        {% include img_cached.html src="//img.shields.io/github/issues/fortran-lang/fpm" %}
+        <span style="display: inline-block;">
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/fortran-lang/fpm" target="_blank"><b>
+              GitHub </b></a>
+              &ensp;
+        </span>
+        <span style="display: inline-block;">
+          <i class="fas fa-info-circle"></i>
+          <a href="https://github.com/fortran-lang/fpm/blob/master/PACKAGING.md" target="_blank"><b>
+            Documentation </b></a>
+            &ensp;
+        </span>
 
 
         <h3><i data-feather="globe"></i>
           fortran-lang.org</h3>
         <p>
         This website is open source and contributions are welcome!
-        Find out more on
-        <a href="https://github.com/fortran-lang/fortran-lang.github.io" target="_blank">
-          <i class="devicon-github-plain colored"></i> GitHub</a>.
         </p>
-        {% include img_cached.html src="//img.shields.io/github/stars/fortran-lang/fortran-lang.github.io?style=social" %}
-        {% include img_cached.html src="//img.shields.io/github/forks/fortran-lang/fortran-lang.github.io?style=social&label=Fork" %}
-        {% include img_cached.html src="//img.shields.io/github/last-commit/fortran-lang/fortran-lang.github.io?color=blue" %}
-        {% include img_cached.html src="//img.shields.io/github/issues/fortran-lang/fortran-lang.github.io" %}
+        <span style="display: inline-block;">
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/fortran-lang/fortran-lang.org" target="_blank"><b>
+              GitHub </b></a>
+              &ensp;
+        </span>
+        <span style="display: inline-block;">
+          <i class="fab fa-git-alt"></i> 
+          <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/CONTRIBUTING.md" target="_blank"><b>
+          Contributing </b></a>
+        </span>
 
         </br>
 
@@ -78,17 +97,27 @@ description: Collaboration for the advancement of Fortran
 <section class="front-section">
   <div class="container">
   <h2>Get Involved!</h2>
-
+    
   <div class="col-narrow">
-    <h3>Ways to contribute?</h3>
+    <h3>
+      <i data-feather="message-circle"></i>
+      Ways to contribute</h3>
+    <p>
+
+
+    </p>
   </div>
 
   <div class="col-narrow">
-    <h3>Contributor guides</h3>
+    <h3> <i data-feather="edit"></i>
+      Contributor guide</h3>
   </div>
   
+</br>
+
   <div class="col-narrow">
-    <h3>Community conduct</h3>
+    <h3><i data-feather="smile"></i>
+      Community conduct</h3>
   </div>
   
   </div>
@@ -97,30 +126,13 @@ description: Collaboration for the advancement of Fortran
 <section class="front-section shaded">
   <div class="container">
     <h2>Fortran-lang Contributors</h2>
-    <p>
-    <b>Filter by repository: </b>
-    <select id="repo-selector" onchange="repoSelector(this);">
-      <option value="">All</option>
-      <option value="fortran-lang/fpm">fortran-lang/fpm</option> 
-      <option value="fortran-lang/stdlib">fortran-lang/stdlib</option>
-      <option value="fortran-lang.org">fortran-lang.org</option>
-      <option value="j3-fortran/fortran_proposals">j3-fortran/fortran_proposals</option>
-  </select>
 
-  <b>Date range: </b>
-  <input type="text" id="amount" style="border: 0; color: #734f96; font-weight: bold;" size="30"/>
-  <b>User plots: </b>
-  <input type="checkbox" id="userPlots" value="1" onchange="generateContributorStats();">
-  </p>
-  <canvas id="chart-all" height="75px"></canvas>
-  <div id="slider-range" style="margin: 10px 30px;"></div>
-
-    <div class="container-flex" id="gh-contributors"></div>
+    <div id="gh-contributors-slider"></div>
+    <div id="gh-contributors" data-startdate="May 01 2020" data-enddate="May 31 2020"></div>
 </div>
 </section>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-<script type="text/javascript" src="{{site.baseurl}}/assets/github-activity-0.1.5/github-activity-0.1.5.min.js"></script>
+
 <script>
 
   GitHubActivity.feed({
@@ -129,6 +141,6 @@ description: Collaboration for the advancement of Fortran
     limit: 20 // optional
   });
   
-  </script>
+</script>
   
 
