Minor update: javascript cleanup

--- a/community/index.html
+++ b/community/index.html
@@ -128,7 +128,7 @@ description: Collaboration for the advancement of Fortran
     <h2>Fortran-lang Contributors</h2>
 
     <div id="gh-contributors-slider"></div>
-    <div id="gh-contributors" data-startdate="May 01 2020" data-enddate="May 31 2020"></div>
+    <div id="gh-contributors"></div>
 </div>
 </section>
 
