Update: community page content
Add text for how to start contributing.

--- a/community/index.html
+++ b/community/index.html
@@ -13,7 +13,7 @@ description: Collaboration for the advancement of Fortran
 
 <section class="front-section shaded">
     <div class="container">
-      <h2>Fortran-lang community projects</h2>
+      <h2>Fortran-lang Community Projects</h2>
   
       <div class="col-narrow">
 
@@ -26,19 +26,19 @@ description: Collaboration for the advancement of Fortran
       </p>
       <span style="display: inline-block;">
         <i class="fab fa-github"></i>
-        <a href="https://github.com/fortran-lang/stdlib" target="_blank"><b>
+        <a href="https://github.com/fortran-lang/stdlib" target="_blank" rel="noopener"><b>
             GitHub </b></a>
             &ensp;
       </span>
       <span style="display: inline-block;">
         <i class="fas fa-info-circle"></i>
-        <a href="https://stdlib.fortran-lang.org/" target="_blank"><b>
+        <a href="https://stdlib.fortran-lang.org/" target="_blank" rel="noopener"><b>
           Documentation </b></a>
           &ensp;
       </span>
       <span style="display: inline-block;">
         <i class="fab fa-git-alt"></i> 
-        <a href="https://github.com/fortran-lang/stdlib/blob/master/WORKFLOW.md" target="_blank"><b>
+        <a href="https://github.com/fortran-lang/stdlib/blob/master/WORKFLOW.md" target="_blank" rel="noopener"><b>
         Contributing </b></a>
       </span>
 
@@ -52,13 +52,13 @@ description: Collaboration for the advancement of Fortran
         </p>
         <span style="display: inline-block;">
           <i class="fab fa-github"></i>
-          <a href="https://github.com/fortran-lang/fpm" target="_blank"><b>
+          <a href="https://github.com/fortran-lang/fpm" target="_blank" rel="noopener"><b>
               GitHub </b></a>
               &ensp;
         </span>
         <span style="display: inline-block;">
           <i class="fas fa-info-circle"></i>
-          <a href="https://github.com/fortran-lang/fpm/blob/master/PACKAGING.md" target="_blank"><b>
+          <a href="https://github.com/fortran-lang/fpm/blob/master/PACKAGING.md" target="_blank" rel="noopener"><b>
             Documentation </b></a>
             &ensp;
         </span>
@@ -71,13 +71,13 @@ description: Collaboration for the advancement of Fortran
         </p>
         <span style="display: inline-block;">
           <i class="fab fa-github"></i>
-          <a href="https://github.com/fortran-lang/fortran-lang.org" target="_blank"><b>
+          <a href="https://github.com/fortran-lang/fortran-lang.org" target="_blank" rel="noopener"><b>
               GitHub </b></a>
               &ensp;
         </span>
         <span style="display: inline-block;">
           <i class="fab fa-git-alt"></i> 
-          <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/CONTRIBUTING.md" target="_blank"><b>
+          <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener"><b>
           Contributing </b></a>
         </span>
 
@@ -96,28 +96,64 @@ description: Collaboration for the advancement of Fortran
 
 <section class="front-section">
   <div class="container">
-  <h2>Get Involved!</h2>
+  <h2>Get Involved</h2>
     
   <div class="col-narrow">
     <h3>
       <i data-feather="message-circle"></i>
-      Ways to contribute</h3>
+      Join the Discussion</h3>
     <p>
+      The easiest way to join the community and contribute is by
+      commenting on issues and pull requests in the project
+      repositories.
+      <!-- Open discussion is vital to making project decisions,
+      and benefits greatly from varied expertise and insight across the community. -->
+      Whether Fortran beginner or seasoned veteran, your feedback and comments are most
+      welcome in guiding the future of Fortran-lang.
 
 
     </p>
   </div>
 
   <div class="col-narrow">
-    <h3> <i data-feather="edit"></i>
-      Contributor guide</h3>
+    <h3> <i data-feather="terminal"></i>
+      Build and Test</h3>
+      <p>
+        Get more involved with each project by cloning, building and testing
+        it on your own machine(s) and with your own codes;
+        if something doesn't work, create an issue to let us know!
+        We value user feedback highly, be it a bug report, feature request, or
+        suggestion for documentation.
+      </p>
   </div>
   
 </br>
 
   <div class="col-narrow">
+    <h3> <i data-feather="edit"></i>
+      Contributor Guide</h3>
+      <p>
+        Want to contribute code and content?
+        Check out the contributor guides in each repository for information
+        on the project workflow and recommended practices.
+      </p>
+      <ul>
+        <li> <a href="https://github.com/fortran-lang/stdlib/blob/master/WORKFLOW.md" target="_blank" rel="noopener">Contributor guide for stdlib</a> </li>
+        <li> <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">Contributor guide for fortran-lang.org</a> </li>
+      </ul>
+  </div>
+
+  <div class="col-narrow">
     <h3><i data-feather="smile"></i>
-      Community conduct</h3>
+      Community Conduct</h3>
+      <p>
+        As a community, we strive to make participation in our discussions and projects a friendly and
+        harassment-free experience for everyone.
+
+      </p>
+      <p> See the full 
+      <a href="https://github.com/fortran-lang/stdlib/blob/master/CODE_OF_CONDUCT.md" target="_blank" rel="noopener">Code of Conduct</a>
+      </p>
   </div>
   
   </div>
@@ -126,7 +162,9 @@ description: Collaboration for the advancement of Fortran
 <section class="front-section shaded">
   <div class="container">
     <h2>Fortran-lang Contributors</h2>
-
+    <p>
+      We are grateful for every contribution made by all members of the community.
+    </p>
     <div id="gh-contributors-slider"></div>
     <div id="gh-contributors"></div>
 </div>
