--- a/packages/search.html
+++ b/packages/search.html
@@ -5,7 +5,6 @@ title: Search
 
 {% include nav.html active='Packages' %}
   
-<script src="{{ site.baseurl }}/packages/projects_json.js"></script>
 
 
   <section class="front-section">
@@ -20,7 +19,7 @@ title: Search
           </form>
         </br>
 
-        <div style="margin-left: 30px; margin-right: 100px;" id="search-results"></div>
+        <div style="margin-left: 30px; margin-right: 100px;" id="package-search-results"></div>
 
       </div>
   
@@ -38,5 +37,3 @@ title: Search
   
     </div>
   </section>
-  
-  <script src="{{ site.baseurl }}/packages/projects_search.js"></script>
