Update: packages page without community projects
Restructures the package page without the community projects, which have moved to community page.

--- a/packages/search.html
+++ b/packages/search.html
@@ -4,7 +4,6 @@ title: Search
 ---
 
 {% include nav.html active='Packages' %}
-  
 
 
   <section class="front-section">
@@ -13,9 +12,9 @@ title: Search
           
           <h2> <a href='{{ site.baseurl }}/packages'> Packages</a> / {{page.title}}</h2>
           
-          <form action="{{ site.baseurl }}/packages/search" method="get">
+          <form class="search-form" action="{{ site.baseurl }}/packages/search" method="get">
             <input type="text" name="query" id="search-query" class="search-box" placeholder="Search for a project">
-            <input type="submit" value="Search" class="search-btn">
+            <input type="submit" value="" class="search-btn">
           </form>
         </br>
 
