Jekyll build, commit f3d62b69ea1369b9a7b378f825ab4bf73a0d912b (on:push)

--- a/compilers/index.html
+++ b/compilers/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <link href="/assets/css/main.css" rel="stylesheet">
     <link href="/assets/css/syntax.css" rel="stylesheet">
-    <link rel="canonical" href="http://localhost:4000/compilers/" />
+    <link rel="canonical" href="https://fortran-lang.org/compilers/" />
     <script src="https://kit.fontawesome.com/8d17d4fe97.js" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
