Jekyll build, commit 88fc72af119972f9b3dcdefeb08e51d1bba575ae (on:push)

--- a/learn/quickstart/hello_world.html
+++ b/learn/quickstart/hello_world.html
@@ -454,8 +454,8 @@ which is part of the
 <a href="https://gcc.gnu.org/">GNU Compiler Colection (GCC)</a>.</p>
 
 <p>To install gfortran on Linux, use your system package manager.
-Otherwise, for macOS or Windows, refer to gfortran binaries from 
-<a href="https://gcc.gnu.org/install/binaries.html">this page</a>.</p>
+On macOS, you can install gfortran using <a href="https://brew.sh/">Homebrew</a> or <a href="https://www.macports.org/">MacPorts</a>.
+On Windows, you can get native binaries <a href="http://www.equation.com/servlet/equation.cmd?fa=fortran">here</a>.</p>
 
 <p>To check if you have <em>gfortran</em> setup correctly, open a terminal and run the following command :</p>
 
