Jekyll build, commit 8961e210980972ebaa32f201bc8d5a2e38736639 (on:push)

--- a/learn/index.html
+++ b/learn/index.html
@@ -245,6 +245,13 @@
         A github repository containing code samples for various Fortran 2018 features
       </li>
       
+      <li> 
+        <a href="https://stevelionel.com/drfortran" target="_blank"><b>
+          Doctor Fortran Blog
+        </b></a>
+        A collection of posts on interesting or little-understood aspects of the Fortran language
+      </li>
+      
 
     </ul>
 
