Jekyll build, commit a02aaa99314fd717ad1f7bdcf96c109f1d165f29 (on:push)

--- a/learn/quickstart/organising_code.html
+++ b/learn/quickstart/organising_code.html
@@ -593,6 +593,11 @@ the dimensions of the array <code class="highlighter-rouge">A</code>; this will 
 
 </span><span class="k">end</span><span class="w"> </span><span class="k">function</span><span class="w"> </span><span class="n">vector_norm</span><span class="w">
 </span></code></pre></div></div>
+<div class="aside-tip">
+    
+    <p><strong>Tip:</strong> In production code, the intrinsic function <code class="highlighter-rouge">norm2</code> should be used.</p>
+
+</div>
 
 <p>To execute this function:</p>
 
