Jekyll build, commit 92ee93d5c7c5ee333599a0cde816d0416348d0de (on:push)

--- a/packages/io.html
+++ b/packages/io.html
@@ -237,7 +237,7 @@
               
               <td> <h3><a href="https://github.com/Unidata/netcdf-fortran" target="_blank">
                 <i class="devicon-github-plain colored"></i>
-                netCFD-Fortran</a></h3> </td>
+                netCDF-Fortran</a></h3> </td>
               <td> 
                   <img src="https://img.shields.io/github/v/release/Unidata/netcdf-fortran?color=green">
               </td>
@@ -251,7 +251,7 @@
               
           </tr>
           <tr><td colspan="7" class="light">
-              Fortran interfaces for netCFD C library.
+              Fortran interfaces for netCDF C library.
           </td></tr>
           <tr><td colspan="7" class="light small">
             <b>Tags: </b>netcdf
