Jekyll build, commit ab263ccfce465515ab052cec269a6fc4d740841d (on:push)

--- a/compilers/index.html
+++ b/compilers/index.html
@@ -120,7 +120,7 @@
         
       </div>
 
-      <p>Fortran has several open source and commercial compilers.</p>
+      <p>Fortran has over a dozen open source and commercial compilers.</p>
 
 <h2 id="open-source-compilers">Open source compilers</h2>
 
