Jekyll build, preview pr/152 (on:pull_request)

--- a/pr/152/learn/index.html
+++ b/pr/152/learn/index.html
@@ -204,7 +204,7 @@
           <a href="/pr/152/learn/os_setup" >
             Setting up your OS
           </a></h3>
-          <p> How to setup a Fortran developement environment in Windows, Linux and Mac. </p>
+          <p> How to setup a Fortran developement environment in Windows, Linux and macOS. </p>
         </div>
       
       </div>
