--- a/pr/152/learn/os_setup.html
+++ b/pr/152/learn/os_setup.html
@@ -542,28 +542,28 @@
       </div>
 
       <p><br /><br /></p>
-<div style="text-align:center"><span style="font-size:1.5em">A beginner's tutorial on the software that needs to be installed to start with Fortran developement</span></div>
+<div style="text-align:center"><span style="font-size:1.5em">A beginner's tutorial on the software that needs to be installed to start with Fortran development</span></div>
 <p><br /><br /></p>
 
 <hr />
-<p><span style="color:grey; font-size:0.8em"><em>Authors: Stavros Meskos,</em></span></p>
+<p><span style="color:grey; font-size:0.8em"><em>Authors: Stavros Meskos, Laurence Kedward, Arjen Markus, Ondřej Čertík, Milan Curcic</em></span></p>
 
-<p><span style="color:grey; font-size:0.8em"><em>Last update: 06-Oct-2020</em></span></p>
+<p><span style="color:grey; font-size:0.8em"><em>Last update: 19-Oct-2020</em></span></p>
 
 <hr />
 
-<p>In this mini-book we address the very first problem that many new Fortran programmers stumble upon. Before everything, you need to choose a compiler and install it. Then you will need a text editor or perhaps an IDE (Integrated Development Environment). There are many options that are almost all of them available in all major OS (operating systems). However, the process to install and configure them, in order to start coding, greatly differs between Windows, Linux, and Mac. There are several Fortran compilers. Here, we pick those that fulfill certain criteria and provide a guide on how to install them in all the aforementioned operating systems. A list of popular text editors and IDEs with some related information on how to choose between them is presented as well.</p>
+<p>In this mini-book we address the very first problem that many new Fortran programmers encounter. Before everything, you will need to choose a compiler and install it. Then you will need a text editor or perhaps an IDE (Integrated Development Environment). There are many options, most of them available in all major OSs (operating systems). However, the process to install and configure them greatly differs between Windows, Linux, and macOS. There are several Fortran compilers. Here, we pick those that meet certain criteria and provide a guide on how to install them in all the aforementioned OSs. A list of popular text editors and IDEs and information on how to choose between them is presented as well.</p>
 
 <div class="aside-note">
     
     <p><strong>Note:</strong> 
-If you have already set up your environment, you may skip this tutorial and move forward with the <a href="/pr/152/learn/quickstart">Quickstart Fortran Tutorial</a> to start coding your first <code class="highlighter-rouge">Hello Word</code> program or with the <a href="/pr/152/learn/building_programs">Building programs</a> mini-book to understand how a compiler works.</p>
+If you have already set up your environment, you may skip this tutorial and move forward with the <a href="/pr/152/learn/quickstart">Quickstart Fortran Tutorial</a> to start coding your first <code class="highlighter-rouge">Hello World</code> program or with the <a href="/pr/152/learn/building_programs">Building programs</a> mini-book to understand how a compiler works.</p>
 
 </div>
 
 <hr />
 
-<p><em>The matter of the text editors and IDEs has always been highly controversial among the developers’ community. What you will choose in the end is a matter of personal taste. Every solution comes with its own short- and forthcomings. For that reason, in this guide, we will not push the reader towards one or another direction. We will, however, present a list of the most popular tools.</em></p>
+<p><em>The choice of text editors and IDEs has been controversial among the developers. What you choose is a matter of personal taste. Every solution comes with its own pros and cons. For that reason, in this guide, we will not push the reader towards one or another direction. We will, however, present a list of the most popular tools.</em></p>
 
 
       <div class="container-flex">
