--- a/pr/152/learn/os_setup/choose_compiler.html
+++ b/pr/152/learn/os_setup/choose_compiler.html
@@ -550,20 +550,13 @@
         
       </div>
 
-      <p>A comprehensive list of available compilers is provided in this website under <a href="/pr/152/compilers">Compilers</a>. In this guide, we will focus only on those that fulfill the following criteria:</p>
-<ol>
-  <li>Free to install and use</li>
-  <li>Actively maintained/updated</li>
-  <li>Production-level ready</li>
-</ol>
+      <p>A comprehensive list of available compilers is provided <a href="/pr/152/compilers">here</a>. In this guide, we will focus only on those that are free to install and use.</p>
 
-<p>Out of those enlisted at the link above, and as of the time of writing this tutorial only two fully match our criteria, GFortran and OpenCoarrays, both members of the GNU Compiler Collection (GCC), while NVFortran and IFort do match under certain conditions.</p>
+<p>Of those listed at the link above, open source and free are GFortran (with OpenCoarrays), Flang, and LFortran. Finally, NVFortran and IFort* are commercial with free community editions.</p>
 
-<p>NVFortran is part of the <a href="https://www.pgroup.com/index.htm">NVIDIA HPC SDK formerly known as PGI Compilers &amp; Tools</a>. It comes with both free and paid versions. The current version 20.7 is available only for Linux x86_64 systems, while the Windows version <em>will be available at a later date.</em> It worths mentioning that nvfortran comes with NVIDIA CUDA Fortran, <em>a small set of extensions to Fortran that supports and is built upon the CUDA computing architecture</em>.</p>
+<p><em>Note</em>: *IFort (Intel’s Fortran Compiler) does not offer a free community edition in general. However, if you are a student, educator, or open-source contributor, you may <a href="https://software.intel.com/content/www/us/en/develop/articles/qualify-for-free-software.html">qualify for free software</a>.</p>
 
-<p>IFort (Intel’s Fortran Compiler) is not free in general. However, if you are a student, educator, or open-source contributor, you may <a href="https://software.intel.com/content/www/us/en/develop/articles/qualify-for-free-software.html">qualify for free software</a>.</p>
-
-<p>Both NVFortran(NVidia) and IFort(Intel) are very well documented and readers can find detailed information about installing and using them on their websites respectively. For that reason, in the next chapter, we will focus only on the open-source GCC compilers. In the future, when more compilers (e.g., the expected <a href="https://github.com/llvm/llvm-project/tree/master/flang">Flang</a> and <a href="https://lfortran.org/">LFortran</a>) fully meet our criteria, this guide will be updated accordingly.</p>
+<p>Both NVFortran (NVIDIA) and IFort (Intel) are well documented and readers can find detailed information about installing and using them on their websites respectively. In the next chapter, we use GFortran for the tutorial as it is a mature open source compiler. We encourage users to also try other open source and commercial compilers.</p>
 
 
       <div class="container-flex">
