--- a/pr/152/learn/os_setup/text_editors.html
+++ b/pr/152/learn/os_setup/text_editors.html
@@ -554,15 +554,15 @@
         
       </div>
 
-      <p>After you have installed your compiler, you will need a text editor to start typing your code. Any text editor can serve this purpose, even the default NotePad that comes pre-installed with Windows. However, there are specialized editors for programming languages. These editors come with many useful features like auto-complete, syntax-highlighting, auto-indentation, brace-matching, and many more, with few of them pre-installed and the majority in form of external packages. This means that by default these features are not installed in the editor, but it’s up to the user to search for them through a package-manager and install/configure them manually.</p>
+      <p>After you have installed your compiler, you will need a text editor to write your code. Any text editor can serve this purpose, even the built-in Notepad on Windows. However, there are specialized editors for programming languages. These editors come with many useful features like auto-complete, syntax-highlighting, auto-indentation, brace-matching, and many more, with few of them pre-installed and the majority in form of external plug-ins. This means that by default these features are not installed in the editor, but it’s up to you to search for them through a package manager and install and configure them manually.</p>
 
-<p>A list of the most popular text editors, that support the Fortran language syntax in alphabetical order:</p>
+<p>Here’s a list of the most popular text editors that support Fortran syntax, in alphabetical order:</p>
 <ul>
   <li><a href="https://atom.io/">Atom</a></li>
   <li><a href="https://www.gnu.org/software/emacs/">Emacs</a></li>
   <li><a href="https://notepad-plus-plus.org/">NotePad++</a></li>
   <li><a href="https://www.sublimetext.com/">SublimeText</a></li>
-  <li><a href="https://www.vim.org/">Vim</a></li>
+  <li><a href="https://www.vim.org/">Vim</a> and <a href="https://neovim.io/">Neovim</a></li>
   <li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
 </ul>
 
@@ -570,10 +570,10 @@
 
 <p>Things to consider before choosing a text editor:</p>
 <ul>
-  <li><strong>Ergonomics:</strong> This is a purely subjective matter and it concerns how easy, uninterrupted the UI (User Interface) feels to the developer while using the editor.</li>
-  <li><strong>Extensibility:</strong> As explained at the top of this page, the text-editors come with a plethora of features as external packages. The variety, the installation process, the documentation, and, well, the user-friendliness of the packages are all fall under this category and are equally important.</li>
-  <li><strong>Speed:</strong> With how powerful modern hardware can be, the speed of editors is becoming of minor importance. However, for the less powerfull systems, users might want to consider this as well. There are light- and heavyweight editors that may impact the overall editing performance. For example, you can expect Atom and VSCode which are built with Electron to run slower than the rest native editors listed above.</li>
-  <li><strong>Learning curve:</strong> Last but not least, new users should consider how much time would it take to get used to a new editor. Both Vim and Emacs are notoriously difficult for newcomers with a very steep learning curve. They offer a uniquely different experience than any other editor, by forcing the developer to only use the keyboard for all editing tasks eliminating the use of the mouse.</li>
+  <li><strong>Ergonomics:</strong> This is purely subjective and concerns how easy, uninterrupted the UI (User Interface) feels to the developer while using the editor.</li>
+  <li><strong>Extensibility:</strong> As mentioned above, text editors come with many features as external packages. The variety, the installation process, the documentation, and user-friendliness of the packages all fall under this category.</li>
+  <li><strong>Speed:</strong> With how powerful modern hardware can be, the speed of editors is becoming of minor importance. However, for the less powerful systems, you may want to consider this as well. Heavyweight editors may impact the writing performance. For example, you can expect Atom and VSCode to run slower than the lightweight editors like Vim or Emacs.</li>
+  <li><strong>Learning curve:</strong> Last but not least, new users should consider how easy it is to get used to a new editor. Vim and Emacs have a steep learning curve and are notoriously difficult for newcomers. They offer a uniquely different experience than any other editor by forcing you to use the keyboard for all editing tasks.</li>
 </ul>
 
 <h2 id="configuring-vs-code">Configuring VS Code</h2>
@@ -582,7 +582,7 @@
 The following extensions are suggested for Fortran developement:</p>
 <ul>
   <li><a href="https://marketplace.visualstudio.com/items?itemName=krvajalm.linter-gfortran">Modern Fortran by Miguel Carvajal</a></li>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=hansec.fortran-ls">FORTRAN IntelliSense by Chris Hanses</a>
+  <li><a href="https://marketplace.visualstudio.com/items?itemName=hansec.fortran-ls">FORTRAN IntelliSense by Chris Hansen</a>
     <ul>
       <li>Depends on the previous <em>Modern Fortran</em> extension, as well as <a href="https://www.python.org/">Python</a> and <a href="https://github.com/hansec/fortran-language-server">Fortran Language Server</a>, which need to be installed.</li>
     </ul>
@@ -601,18 +601,22 @@ The following extensions are suggested for Fortran developement:</p>
 </ul>
 
 <h2 id="configuring-sublimetext">Configuring SublimeText</h2>
-<p>A well structured gist that provides instructions on how to set up SublimeText for Fortran developement is given in this link: 
-<a href="https://gist.github.com/sestelo/6b01e1405c1d0fa7f0ecdc951caaa995">https://gist.github.com/sestelo/6b01e1405c1d0fa7f0ecdc951caaa995</a></p>
 
-<hr />
-
-<p><strong><em>Request help from people that use the following Editors to fill the missing content.</em></strong></p>
+<p>A well structured gist that provides instructions on how to set up SublimeText for Fortran developement is given <a href="https://gist.github.com/sestelo/6b01e1405c1d0fa7f0ecdc951caaa995">here</a>.</p>
 
 <h2 id="configuring-atom">Configuring Atom</h2>
 
-<h2 id="configuring-vim">Configuring Vim</h2>
+<p>Atom’s configuration process is similar to VSCode one. At the main interface, if the <em>Welcome Guide</em> page is already opened for you, just click the <strong>Install a Package</strong> option, otherwise you can find the same option through the navigation bar at the top by clicking <em>Packages</em>. In doing so a new page under <em>Settings</em> opens where you can just start typing the package you want to install.</p>
 
-<h2 id="configuring-emacs">Configuring Emacs</h2>
+<p>One package that includes many Fortran features is <a href="https://atom.io/packages/ide-fortran">IDE-FORTRAN by hansec</a>. It needs the following packages to be installed:</p>
+<ul>
+  <li><a href="https://atom.io/packages/atom-ide-ui">atom-ide ui by facebook-atom</a></li>
+  <li><a href="https://atom.io/packages/language-fortran">language-fortran by dparkins</a></li>
+</ul>
+
+<p>Additionally just like in VSCode it needs <a href="https://www.python.org/">Python</a> and <a href="https://github.com/hansec/fortran-language-server">Fortran Language Server</a> to be installed.</p>
+
+<p>For version control a very popular package is <a href="https://atom.io/packages/git-plus">Git-Plus by akonwi</a>.</p>
 
 
       <div class="container-flex">
