--- a/pr/152/learn/os_setup/tips.html
+++ b/pr/152/learn/os_setup/tips.html
@@ -558,15 +558,15 @@
         
       </div>
 
-      <p>Closing this mini-tutorial we give a few tips and share some thoughts that will, hopefully, help you in choosing a compiler and an editor or an IDE.</p>
+      <p>To conclude, we give a few tips that may help you to choose a compiler and an editor or an IDE.</p>
 
 <ul>
-  <li>Check <a href="https://www.fortran.uk/fortran-compiler-comparisons/">this</a> site for a comprehensive Fortran Compiler Comparisons.</li>
-  <li>An importan detail regarding NVFortran compiler: since version 17.1 support for compute capability 2.0 (Fermi) and lower has been removed. This is important since, at any time, only the latest compiler version is free to download. It means that many users with older GPUs will not be able to run CUDA Fortran with the current (20.7) or future versions. The readers can refer to this <a href="https://www.wikiwand.com/en/CUDA#/GPUs_supported">wiki</a> to find their GPU’s compute capability and cross-check with the latest CUDA SDK that supports it.</li>
-  <li>There are plenty of online Fortran compilers. These are websites that usually offer a simplistic and very basic text editor and allow the users to compile and run their code in a remote server. They are particularly useful for quick prototyping and for testing purposes. Even if we promised neutrality, an exception will be made here to suggest the readers to check the open-source and free <a href="https://godbolt.org/">godbolt</a>, an amazing tool with unique features!</li>
-  <li>Arguably the most popular Text Editor, according to recent online surveys, as of the latest update of this tutorial, is the Visual Studio Code, developed by Microsoft.</li>
-  <li>Regarding IDEs, the most common free choices are the CODE::BLOCKS and Geany. Many of the commercial IDEs give up to 30 days of free trial period. Also, keep in mind that among the commercial IDEs the prices may vary greatly, some might be quite affordable. Finally, if you are a student, an open-source developer, or a …hobbyist <em>Fortraner</em> do not hesitate to contact those companies and request for a discount. There have been cases, e.g., in r/fortran, where representatives, from at least one company, have offered to individuals, looking for affordable complete solutions (IDE + compiler), discount codes.</li>
-  <li>Finally, please join us in <a href="https://fortran-lang.discourse.group/">Fortran Discourse</a> and do not hesitate to post your questions and request for further information.</li>
+  <li>Check <a href="https://www.fortran.uk/fortran-compiler-comparisons/">this site</a> for a comprehensive comparison of Fortran compilers.</li>
+  <li>Since NVFortran version 17.1, the support for compute capability 2.0 (Fermi) and lower has been removed. This is important because, at any time, only the latest compiler version is free to download. Users with older GPUs will not be able to run CUDA Fortran with the current (20.7) or future versions. Read <a href="https://www.wikiwand.com/en/CUDA#/GPUs_supported">this wiki</a> to find your GPU’s compute capability and cross-check with the latest CUDA SDK that supports it.</li>
+  <li>There are many online Fortran compilers. These are websites that offer a basic text editor and allow you to compile and run your code on a remote server. They are particularly useful for quick prototyping and testing. Although we promised neutrality, we recommend that you check out the open-source and free <a href="https://godbolt.org/">Compiler Explorer</a>, an amazing tool with unique features.</li>
+  <li>Arguably the most popular text editor, according to recent online surveys, is the Visual Studio Code, developed by Microsoft.</li>
+  <li>The most popular free IDEs are the Code::Blocks and Geany. Many commercial IDEs give up to 30 days of free trial. Keep in mind that the prices of commercial IDEs may vary, and some may be quite affordable. Finally, if you are a student, an open-source developer, or a …hobbyist <em>Fortraner</em> do not hesitate to contact those companies and request a discount. There have been cases, e.g., in r/fortran, where representatives, from at least one company, have offered discount codes to individuals looking for affordable complete solutions (IDE + compiler).</li>
+  <li>Finally, please join us on <a href="https://fortran-lang.discourse.group/">Fortran Discourse</a> and do not hesitate to post your questions and request for further information.</li>
 </ul>
 
 
