Rename all instances of fortran-lang.github.io to fortran-lang.org

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ title: Home
       suite of tools, such as
       <a href="https://github.com/fortran-lang/stdlib">Standard Library</a>,
       <a href="https://github.com/fortran-lang/fpm">Package Manager</a>, or
-      <a href="https://github.com/fortran-lang/fortran-lang.github.io">this website</a>.
+      <a href="https://github.com/fortran-lang/fortran-lang.org">this website</a>.
       </p>
     </div>
 
