--- a/packages/search.html
+++ b/packages/search.html
@@ -31,7 +31,7 @@ title: Search
         <!-- <h2 id="faqs">FAQ</h2> -->
         
       See
-	  <a href="https://github.com/fortran-lang/fortran-lang.github.io/blob/master/PACKAGES.md" target="_blank">
+	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
           <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
   
     </div>
