--- a/packages/index.html
+++ b/packages/index.html
@@ -34,7 +34,7 @@ description: A rich ecosystem of high-performance code
         </p>
         <p>
         See
-	        <a href="https://github.com/fortran-lang/fortran-lang.github.io/blob/master/PACKAGES.md" target="_blank">
+	        <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
           <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
         </p>
         <p>
@@ -93,7 +93,7 @@ description: A rich ecosystem of high-performance code
     <div class="col-wide">
       
      See
-	  <a href="https://github.com/fortran-lang/fortran-lang.github.io/blob/master/PACKAGES.md" target="_blank">
+	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
           <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
 
   </div>
