Localize keywords and phrases in navigation bars and footers

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Home
 ---
 
-{% include nav.html active='Home' %}
+{% capture active %}{% t nav_key.home %}{% endcapture %}
+{% include nav.html active=active %}
 
 {% tf index.html %}
