--- a/learn/index.html
+++ b/learn/index.html
@@ -4,6 +4,7 @@ title: Learn Fortran
 description: Learning resources for beginners and experts alike
 ---
 
-{% include nav.html active='Learn' %}
+{% capture active %}{% t nav_key.learn %}{% endcapture %}
+{% include nav.html active=active %}
 
 {% tf learn/index.html %}
