--- a/packages/index.html
+++ b/packages/index.html
@@ -4,6 +4,7 @@ title: Fortran Packages
 description: A rich ecosystem of high-performance code
 ---
 
-{% include nav.html active='Packages' %}
+{% capture active %}{% t nav_key.packages %}{% endcapture %}
+{% include nav.html active=active %}
 
 {% tf packages/index.html %}
