--- a/packages/search.html
+++ b/packages/search.html
@@ -3,6 +3,7 @@ layout: default
 title: Search
 ---
 
-{% include nav.html active='Packages' %}
+{% capture active %}{% t nav_key.packages %}{% endcapture %}
+{% include nav.html active=active %}
 
 {% tf packages/search.html %}
