Localize leftover keywords

--- a/community/index.html
+++ b/community/index.html
@@ -4,6 +4,7 @@ title: Fortran-lang Community
 description: Collaboration for the advancement of Fortran
 ---
 
-{% include nav.html active='Community' %}
+{% capture active %}{% t nav_key.community %}{% endcapture %}
+{% include nav.html active=community %}
 
 {% tf community/index.html %}
