Jekyll build, commit d732235c846e13d449e8e2733997b1c1a84ec61f (on:push)

--- a/packages/preview.html
+++ b/packages/preview.html
@@ -140,8 +140,8 @@
               <td> 
                    <img src="https://img.shields.io/github/license/Fortran-FOSS-Programmers/ford">
                </td>
-              <td> <img src="https://img.shields.io/github/stars/Fortran-FOSS-Programmers/ford?style=social"></td>
-              <td> <img src="https://img.shields.io/github/forks/Fortran-FOSS-Programmers/ford?style=social&label=Fork"> </td>
+              <td> <img src="https://img.shields.io/github/stars/Fortran-FOSS-Programmers/ford"></td>
+              <td> <img src="https://img.shields.io/github/forks/Fortran-FOSS-Programmers/ford"> </td>
               <td> <img src="https://img.shields.io/github/last-commit/Fortran-FOSS-Programmers/ford?color=blue"> </td>
               <td> <img src="https://img.shields.io/github/issues/Fortran-FOSS-Programmers/ford"> </td>
               
